--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
             ],
             "@api/*": [
                 "src/api/*"
+            ],
+            "@utils/*": [
+                "src/utils/*"
             ]
         }
     }
