--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,7 +5,28 @@ on:
   pull_request:
     branches: [ main, master ]
 jobs:
-  test:
+  test-api:
+    timeout-minutes: 10
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: lts/*
+    - name: Install dependencies
+      run: npm ci
+    - name: Run API Tests
+      run: npm run test:api
+      env:
+        API_BASE_URL: ${{ secrets.API_BASE_URL }}
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: playwright-report-api
+        path: playwright-report/
+        retention-days: 30
+
+  test-ui:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
@@ -17,11 +38,13 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
+    - name: Run UI Tests
+      run: npm run test:ui
+      env:
+        BASE_URL: ${{ secrets.BASE_URL }}
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
-        name: playwright-report
+        name: playwright-report-ui
         path: playwright-report/
         retention-days: 30
