feat: Configure Playwright UI tests to run in a Docker container and set the HOME environment variable.

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,6 +29,8 @@ jobs:
   test-ui:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.57.0-jammy
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
@@ -36,12 +38,11 @@ jobs:
         node-version: lts/*
     - name: Install dependencies
       run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
     - name: Run UI Tests
       run: npm run test:ui
       env:
         BASE_URL: ${{ secrets.BASE_URL }}
+        HOME: /root
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
