--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,31 +13,36 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
-    - name: Install dependencies
+        cache: 'npm'
       run: npm ci
+      env:
+        PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
     - name: Run API Tests
       run: npm run test:api
       env:
         API_BASE_URL: ${{ secrets.API_BASE_URL }}
+        LOG_LEVEL: info 
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-report-api
         path: playwright-report/
-        retention-days: 30
-
+        retention-days: 15
   test-ui:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/playwright:v1.57.0-jammy
+      image: mcr.microsoft.com/playwright:v1.57.0-jammy 
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
+        cache: 'npm'
     - name: Install dependencies
       run: npm ci
+      env:
+        PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1 
     - name: Run UI Tests
       run: npm run test:ui
       env:
@@ -48,4 +53,4 @@ jobs:
       with:
         name: playwright-report-ui
         path: playwright-report/
-        retention-days: 30
+        retention-days: 15
