--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,6 +14,7 @@ jobs:
       with:
         node-version: lts/*
         cache: 'npm'
+    - name: Install dependencies
       run: npm ci
       env:
         PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
