feat: add various fixture images and exclude image path changes from API test workflow triggers.

--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -9,6 +9,7 @@ on:
       - 'src/config/**'
       - 'src/utils/**'
       - 'src/fixtures/**'
+      - '!src/fixtures/images/**'
       - 'package.json'
       - 'package-lock.json'
   pull_request:
@@ -19,6 +20,7 @@ on:
       - 'src/config/**'
       - 'src/utils/**'
       - 'src/fixtures/**'
+      - '!src/fixtures/images/**'
       - 'package.json'
       - 'package-lock.json'
   workflow_dispatch:
