--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "strict": true,
         "baseUrl": ".",
         "esModuleInterop": true,
+        "resolveJsonModule": true,
         "paths": {
             "@src/*": [
                 "src/*"
