--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,32 +1,26 @@
-name: UI Tests
+name: E2E Tests
 
 on:
   push:
     branches: [ main, master ]
     paths:
-      - 'tests/web/**'
-      - 'src/web/**'
-      - 'src/config/**'
-      - 'src/utils/**'
-      - 'src/fixtures/**'
+      - 'tests/e2e/**'
+      - 'src/**'
       - 'playwright.config.ts'
       - 'package.json'
       - 'package-lock.json'
   pull_request:
     branches: [ main, master ]
     paths:
-      - 'tests/web/**'
-      - 'src/web/**'
-      - 'src/config/**'
-      - 'src/utils/**'
-      - 'src/fixtures/**'
+      - 'tests/e2e/**'
+      - 'src/**'
       - 'playwright.config.ts'
       - 'package.json'
       - 'package-lock.json'
   workflow_dispatch:
 
 jobs:
-  test-ui:
+  test-e2e:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     container:
@@ -41,14 +35,15 @@ jobs:
       run: npm ci
       env:
         PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1 
-    - name: Run UI Tests
-      run: npm run test:ui
+    - name: Run E2E Tests
+      run: npx playwright test tests/e2e --workers=1
       env:
         BASE_URL: ${{ secrets.BASE_URL }}
         HOME: /root
+        # Add other secrets here if needed for DB connection or credentials
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
-        name: playwright-report-ui
+        name: playwright-report-e2e
         path: playwright-report/
         retention-days: 15
